package ib.IBRequest;

import calculateImpliedVolatility.proto;
import calculateOptionPrice.proto;
import cancelCalculateImpliedVolatility.proto;
import cancelCalculateOptionPrice.proto;
import cancelHistoricalData.proto;
import cancelMktData.proto;
import cancelMktDepth.proto;
import cancelNewsBulletins.proto;
import cancelOrder.proto;
import cancelPositions.proto;
import cancelRealTimeBars.proto;
import cancelScannerSubscription.proto;
import eConnect.proto;
import eDisconnect.proto;
import exerciseOptions.proto;
import isConnected.proto;
import placeOrder.proto;
import reqAccountUpdates.proto;
import reqAllOpenOrders.proto;
import reqAutoOpenOrders.proto;
import reqContractDetails.proto;
import reqCurrentTime.proto;
import reqExecutions.proto;
import reqGlobalCancel.proto;
import reqHistoricalData.proto;
import reqIds.proto;
import reqMarketDataType.proto;
import reqMktData.proto;
import reqMktDepth.proto;
import reqNewsBulletins.proto;
import reqOpenOrders.proto;
import reqPositions.proto;
import reqRealTimeBars.proto;
import reqScannerParameters.proto;
import reqScannerSubscription.proto;
import serverVersion.proto;
import setLogLevel.proto;

message IBRequest {
  oneof req {
    calculateImpliedVolatility calculateImpliedVolatility = 1;
    calculateOptionPrice calculateOptionPrice = 2;
    cancelCalculateImpliedVolatility cancelCalculateImpliedVolatility = 3;
    cancelCalculateOptionPrice cancelCalculateOptionPrice = 4;
    cancelHistoricalData cancelHistoricalData = 5;
    cancelMktData cancelMktData = 6;
    cancelMktDepth cancelMktDepth = 7;
    cancelNewsBulletins cancelNewsBulletins = 8;
    cancelOrder cancelOrder = 9;
    cancelPositions cancelPositions = 10;
    cancelRealTimeBars cancelRealTimeBars = 11;
    cancelScannerSubscription cancelScannerSubscription = 12;
    eConnect eConnect = 13;
    eDisconnect eDisconnect = 14;
    exerciseOptions exerciseOptions = 15;
    isConnected isConnected = 16;
    placeOrder placeOrder = 17;
    reqAccountUpdates reqAccountUpdates = 18;
    reqAllOpenOrders reqAllOpenOrders = 19;
    reqAutoOpenOrders reqAutoOpenOrders = 20;
    reqContractDetails reqContractDetails = 21;
    reqCurrentTime reqCurrentTime = 22;
    reqExecutions reqExecutions = 23;
    reqGlobalCancel reqGlobalCancel = 24;
    reqHistoricalData reqHistoricalData = 25;
    reqIds reqIds = 26;
    reqMarketDataType reqMarketDataType = 27;
    reqMktData reqMktData = 28;
    reqMktDepth reqMktDepth = 29;
    reqNewsBulletins reqNewsBulletins = 30;
    reqOpenOrders reqOpenOrders = 31;
    reqPositions reqPositions = 32;
    reqRealTimeBars reqRealTimeBars = 33;
    reqScannerParameters reqScannerParameters = 34;
    reqScannerSubscription reqScannerSubscription = 35;
    serverVersion serverVersion = 36;
    setLogLevel setLogLevel = 37;
  }
}
